Closed
Bug 518395
Opened 16 years ago
Closed 16 years ago
Drop down menus are rendering with white text instead of black, and are unreadable
Categories
(Core :: Widget: Cocoa, defect)
Tracking
()
RESOLVED
FIXED
mozilla1.9.3a1
People
(Reporter: notforyourmail, Assigned: mstange)
References
Details
(Keywords: regression)
Attachments
(3 files, 1 obsolete file)
User-Agent: Mozilla/5.0 (Macintosh; U; Intel Mac OS X 10.6; en-US; rv:1.9.3a1pre) Gecko/20090923 Minefield/3.7a1pre
Build Identifier: Mozilla/5.0 (Macintosh; U; Intel Mac OS X 10.6; en-US; rv:1.9.3a1pre) Gecko/20090923 Minefield/3.7a1pre
As of the Sept 23rd nightly build, drop down menus are rendering with white text instead of black text. The text shows up as white on the white and grey OS X menu buttons, and white on white on the actual menu lists. They are unreadable.
Reproducible: Always
Steps to Reproduce:
1. Install Sept 23rd nightly minefield build
2. squint at unreadable menus
Actual Results:
menus render with white text instead of black
Expected Results:
menus render with black text instead of white
Here is a screenshot of the white menus. The menus are for this very bug report.
Comment 3•16 years ago
|
||
Did bug 518085 affect this?
| Assignee | ||
Comment 4•16 years ago
|
||
Weird. I'm using that nightly and the same Bugzilla theme, but I don't see it. I hope that bug 518085 fixed it; can you retest with the current nightly?
Comment 5•16 years ago
|
||
Mozilla/5.0 (Macintosh; U; Intel Mac OS X 10.5; en-US; rv:1.9.3a1pre) Gecko/20090923 Minefield/3.7a1pre is the latest (check for updates is saying so at least).
| Assignee | ||
Comment 6•16 years ago
|
||
Oh wait, so I'm actually behind. I'm using yesterday's nightly, and then this is a regression from bug 518085.
| Assignee | ||
Updated•16 years ago
|
Flags: in-testsuite?
Updated•16 years ago
|
Component: General → Widget: Cocoa
Product: Firefox → Core
QA Contact: general → cocoa
Version: unspecified → Trunk
Comment 7•16 years ago
|
||
Seems like it would be nice to have a test to catch this. Not sure how easy
that is to do though.
| Assignee | ||
Comment 8•16 years ago
|
||
I'll add tests that compares all platform colors that can't be changed by the user to known-good hardcoded values. These tests might fail with new OS versions, but then we at least know about it.
| Assignee | ||
Comment 9•16 years ago
|
||
For the record, I failed in bug 518085 because I compared the colors to Firefox 3.5 instead of to a nightly from last week. The color -moz-comboboxtext has been introduced in 1.9.2 in bug 472772.
| Assignee | ||
Comment 10•16 years ago
|
||
| Assignee | ||
Comment 11•16 years ago
|
||
Attachment #402492 -
Flags: review?(joshmoz)
Comment 12•16 years ago
|
||
Comment on attachment 402492 [details] [diff] [review]
fix + test
Did you upload the wrong file?
| Assignee | ||
Comment 13•16 years ago
|
||
Attachment #402492 -
Attachment is obsolete: true
Attachment #402510 -
Flags: review?(joshmoz)
Attachment #402492 -
Flags: review?(joshmoz)
Comment 14•16 years ago
|
||
Comment on attachment 402510 [details] [diff] [review]
fix + test
As for the test, it's interesting but I could take it or leave it. I'm not sure how useful it is and it seems fragile. If roc likes it then go for it.
Attachment #402510 -
Flags: review?(joshmoz) → review+
| Assignee | ||
Comment 15•16 years ago
|
||
Comment on attachment 402510 [details] [diff] [review]
fix + test
roc, do you think this test makes sense?
Attachment #402510 -
Flags: review?(roc)
Attachment #402510 -
Flags: review?(roc) → review+
Comment on attachment 402510 [details] [diff] [review]
fix + test
it's OK
| Assignee | ||
Comment 17•16 years ago
|
||
Status: ASSIGNED → RESOLVED
Closed: 16 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla1.9.3a1
| Assignee | ||
Updated•14 years ago
|
Flags: in-testsuite? → in-testsuite+
You need to log in
before you can comment on or make changes to this bug.
Description
•