Bug 518395 - White text on drop down buttons. r=josh, r=roc